--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
     </div>
 
-    <script src="./js/inicio.js" type="module"></script>
+    <script src="./js/inicio.js"></script>
 </body>
 
 </html>
