--- a/peliculas.html
+++ b/peliculas.html
@@ -111,7 +111,7 @@
         </div>
     </div>
 
-    <script src="/js/global.js"></script>
+    <script src="./js/global.js"></script>
     <script src="./js/peliculas.js"></script>
 </body>
 </html>
