--- a/peliculas.html
+++ b/peliculas.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/975d1954ab.js" crossorigin="anonymous"></script>
     <style>
         .info-serie{
-            margin-top: 38rem !important;
+            margin-top: 160px !important;
         }
         .display-active{
             transform: translateY(45px) !important;
