--- a/index.html
+++ b/index.html
@@ -119,14 +119,18 @@
                         <img class="serie" id="myImage" onclick="modalInfo(this)"
                             src="./img/series/zGbLWPnxbRmuzlNXv1fKPaIKbmX.jpg" alt="La casa de papel"
                             data-trailer="3y-6iaveY6c">
+
+                        <img class="serie" id="myImage" onclick="modalInfo(this)"
+                            src="./img/series/ncftkNAjIz2PBbUMY7T0CHVJP8d.jpg" alt="Lucifer" data-trailer="396t40wCnsk">
+
+                        <img class="serie" id="myImage" onclick="modalInfo(this)"
+                            src="./img/series/bktTDiqlP0uksG75UpqJZUX8FPH.jpg" alt="Lupin"
+                            data-trailer="yX5Py7lL5dw">
                     </div>
                 </div>
 
                 <!-- modal information serie -->
                 <div class="modal" id="modal">
-                    <div class="close" onclick="modal.style.visibility = 'hidden'">
-                        <i class="fa-solid fa-xmark"></i>
-                    </div>
                     <div class="modal-container">
                         <div class="modal-img">
                             <img id="img01">
