--- a/peliculas.html
+++ b/peliculas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +10,16 @@
     <link rel="stylesheet" href="./css/inicio.css">
     <script src="https://kit.fontawesome.com/975d1954ab.js" crossorigin="anonymous"></script>
     <style>
-        .info-serie{
-            margin-top: 160px !important;
-        }
-        .display-active{
+        /* .info-serie {
+            margin-top: 35rem;
+        } */
+
+        /* .display-active {
             transform: translateY(45px) !important;
-        }
+        } */
     </style>
 </head>
+
 <body>
     <div class="content-o-s">
         <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
@@ -31,10 +34,10 @@
             <div>
                 <img src="./img/logo.png" alt="">
                 <div class="list">
-                    <a href="./index.html" class="active">
+                    <a href="./index.html">
                         <p>Series</p>
                     </a>
-                    <a href="./peliculas.html">
+                    <a href="./peliculas.html" class="active">
                         <p>Peliculas</p>
                     </a>
                     <a href="">
@@ -90,9 +93,6 @@
 
                 <!-- modal information serie -->
                 <div class="modal" id="modal">
-                    <div class="close" onclick="modal.style.visibility = 'hidden'">
-                        <i class="fa-solid fa-xmark"></i>
-                    </div>
                     <div class="modal-container">
                         <div class="modal-img">
                             <img id="img01">
@@ -114,4 +114,5 @@
     <script src="./js/global.js"></script>
     <script src="./js/peliculas.js"></script>
 </body>
+
 </html>
